--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -172,5 +172,55 @@
     "error_save": "Не удалось сохранить данные заявки. Попробуйте еще раз.",
     "error_captcha": "Пожалуйста, подтвердите, что вы не робот.",
     "error_file": "Пожалуйста, загрузите свое резюме"
+  },
+  "Legal": {
+    "terms": "Условия",
+    "privacy": "Конфиденциальность",
+    "mentions": "Правовая информация",
+    "cookies": "Cookies",
+    "terms_title": "Условия использования",
+    "privacy_title": "Политика конфиденциальности",
+    "mentions_title": "Правовая информация",
+    "cookies_title": "Политика использования файлов cookie",
+    "privacy_policy": "Политика защиты персональных данных",
+    "last_updated": "Последнее обновление",
+    "mentions_content": {
+      "editor_title": "Издатель сайта",
+      "editor_text": "Данный веб-сайт издается компанией SARL HOUKMI EXPORT, обществом с ограниченной ответственностью с уставным капиталом в [Сумма] DH, юридический адрес: Промышленная зона, Агадир, Марокко.",
+      "hosting_title": "Хостинг",
+      "hosting_text": "Сайт размещен на платформе Vercel Inc., расположенной по адресу: 340 S Lemon Ave #4133, Walnut, CA 91789, США.",
+      "intellectual_title": "Интеллектуальная собственность",
+      "intellectual_text": "Весь контент данного сайта (тексты, изображения, логотипы и т. д.) является исключительной собственностью SARL HOUKMI EXPORT или ее партнеров. Любое воспроизведение или представление, полное или частичное, сайта или любого из его элементов запрещено."
+    },
+    "privacy_content": {
+      "intro_title": "Введение",
+      "intro_text": "Настоящая политика защиты персональных данных предназначена для информирования пользователей о том, как SARL HOUKMI EXPORT собирает и обрабатывает их персональные данные.",
+      "responsible_title": "Ответственный за обработку",
+      "responsible_text": "SARL HOUKMI EXPORT несет ответственность за обработку персональных данных, собранных через сайт.",
+      "data_collected_title": "Собранные данные",
+      "data_collected_text": "Мы собираем данные, которые вы предоставляете нам через контактные формы или формы заявок (имя, фамилия, эл. почта, телефон, резюме и т. д.).",
+      "purposes_title": "Цели",
+      "purposes_text": "Ваши данные обрабатываются для ответа на ваши запросы, управления вашими заявками на работу и улучшения вашего опыта работы с сайтом.",
+      "rights_title": "Ваши права",
+      "rights_text": "Вы имеете право на доступ, исправление, удаление и возражение против обработки ваших данных. Свяжитесь с нами по адресу: info@houkmiexport.com."
+    },
+    "terms_content": {
+      "object_title": "Объект",
+      "object_text": "Настоящие Условия использования определяют условия доступа к сайту и его использования пользователями.",
+      "access_title": "Доступ к сайту",
+      "access_text": "Доступ к сайту возможен 24/7, за исключением случаев технического обслуживания или форс-мажорных обстоятельств.",
+      "user_obligations_title": "Обязанности пользователя",
+      "user_obligations_text": "Пользователь обязуется использовать сайт законным образом, не наносить вред его работе и соблюдать права интеллектуальной собственности.",
+      "liability_title": "Ответственность",
+      "liability_text": "HOUKMI EXPORT стремится предоставлять точную информацию, но не может нести ответственность за ошибки или упущения."
+    },
+    "cookies_content": {
+      "definition_title": "Что такое cookie?",
+      "definition_text": "Cookie — это небольшой текстовый файл, который сохраняется на вашем устройстве при посещении сайта.",
+      "usage_title": "Использование cookie",
+      "usage_text": "Мы используем файлы cookie для обеспечения правильной работы сайта, запоминания ваших предпочтений и анализа трафика.",
+      "management_title": "Управление cookie",
+      "management_text": "Вы можете настроить свой браузер так, чтобы он отклонял файлы cookie или сообщал вам об их установке."
+    }
   }
 }
