--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -66,7 +66,9 @@
       "sun": "300+ солнечных дней",
       "temp": "Средняя 21°C",
       "advantage": "Атлантический бонус"
-    }
+    },
+    "sunshine_quote": "300+ Дней Чистого Солнца",
+    "farms_label": "Прибрежные Фермы Агадира"
   },
   "ProductDetails": {
     "about": "О продукте",
